@@ -1,5 +1,5 @@
 
-DROP TABLE IF EXISTS `schema`; 
+DROP TABLE IF EXISTS schema;
 DROP TABLE IF EXISTS jobs;
 DROP TABLE IF EXISTS job_types;
 DROP TABLE IF EXISTS challenges;
