@@ -282,7 +282,7 @@ sub print_job_data($$){
                 print("Job_Id: $job_info->{job_id}\n");
                 $job_info->{job_name} = '' if (!defined($job_info->{job_name}));
                 print("    job_array_id = $job_info->{array_id}\n");
-                print("    job_array_index = $data->{$job_info->{job_id}}->{array_index}\n");
+                print("    job_array_index = $job_info->{array_index}\n");
                 print("    name = $job_info->{job_name}\n");
                 print("    project = $job_info->{project}\n");
                 print("    owner = $job_info->{job_user}\n");
@@ -382,7 +382,7 @@ EOS
                     printf("%-9.9s %-9.9s %-9.9s %-10.10s %-8.8s %-19.19s %1.1s %-8.8s\n",
                         $job_info->{'job_id'},
                         $job_info->{'array_id'},
-                        $data->{$job_info->{job_id}}->{array_index},
+                        $job_info->{'array_index'},
 						$job_info->{'job_name'},
                         $job_info->{'job_user'},
                         OAR::Stat::local_to_sql($job_info->{'submission_time'}),
